--- a/CondicionesJS/css/style.css
+++ b/CondicionesJS/css/style.css
@@ -1,18 +1,33 @@
 *{
     margin: 0;
-    padding: 0;
+    padding: 5px;
 }
 body {
     position: relative;
     top: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 14px;
+    text-align: center;
+    align-items: center;
 }
 .siBorde{
-    border: 1px solid red;
+    border: 2px solid red;
 }
 .container{
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+h1{
+    padding: 50px;
+    font-size: 50px;
+}
+section{
+    padding: 100px;
+}
+h2{
+    display: inline-block;
+    width: 80%;
+    padding-bottom: 50px;
+    margin: 5px;
+    font-size: 40px;  
 }
